test/e2e/core/manifests/general-use-case/webhook-gateway-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: webhook-gateway-configmap
data:
  foo: |-
    port: "12000"
    endpoint: "/foo"
    method: "POST"
