test/e2e/core/manifests/general-use-case/webhook-gateway-event-source.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: webhook-event-source
  labels:
    # do not remove
    argo-events-event-source-version: v0.10
data:
  foo: |-
    # port to run HTTP server on
    port: "12000"
    # endpoint to listen to
    endpoint: "/index"
    # HTTP request method to allow. In this case, only POST requests are accepted
    method: "POST"
